--- a/render.yaml
+++ b/render.yaml
@@ -23,7 +23,8 @@ services:
       - key: BOT_TOKEN
         sync: false
       
-      - key: ADMIN_ID
+      # 🔥 НЕСКОЛЬКО АДМИНОВ через запятую (например: 123456789,987654321)
+      - key: ADMIN_IDS
         sync: false
       
       - key: CHANNEL_USERNAME
@@ -35,7 +36,12 @@ services:
       - key: RENDER_URL
         sync: false
       
+      # 🔒 Секретный ключ для служебных эндпоинтов
       - key: ADMIN_SECRET
+        sync: false
+      
+      # 🔥 СЕКРЕТНЫЙ ПУТЬ для webhook (автогенерируется если не указан)
+      - key: WEBHOOK_SECRET_PATH
         sync: false
       
       # Опционально: можно изменить хэштег
